# hyperliquid-agent-jarvis

./: .env.example  .gitignore  ARCHITECTURE_NOTES.md  DEPLOY.md  HEALTH_CHECK.md  HOSTING.md  README.md  case_study.md  deploy.sh  install-services.bat  install-services.ps1  pyproject.toml  recover.bat  recover.ps1  restart-stocks.bat  restart.bat  start-stocks.bat  start.bat  status.bat  tunnel-keeper.bat  tunnel-keeper.ps1  tunnel.bat  watchdog.bat  watchdog.ps1
analysis/: case_study.ipynb
dashboard/: .env.example  README.md  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts
src/: api.py  config_loader.py  main.py  risk_manager.py
src/agent/: decision_maker.py  opportunity_scanner.py
src/trading/: alpaca_api.py  hyperliquid_api.py  paper_broker.py
